--- a/Frontend/Pages/UsersPage.razor
+++ b/Frontend/Pages/UsersPage.razor
@@ -4,6 +4,8 @@
 @using Frontend.Components
 @using Frontend.Models
 @using Frontend.ViewModels
+@using Shared
+@using Shared.DTOs
 
 @inherits UsersPageViewModel;
 
@@ -85,27 +87,41 @@ else
 
 @code {
 
-
-
     private async Task HandleUserUpdate(EditUser edited)
     {
-        ShowPwdDialog = false;
-
-        return;
         var user = AllUsers.FirstOrDefault(u => u.Id == edited.Id);
         if (user == null)
             return;
 
-        // Commit allowed changes
-        user.Login = edited.Login;
-        user.FullName = edited.FullName;
 
-        // Password handling stays here (business logic)
-        if (!string.IsNullOrWhiteSpace(edited.NewPassword))
+        bool isLoginChanged = user.Login != edited.Login;
+        bool isFullNameChanged = user.FullName != edited.FullName;
+
+        bool isPasswordChanged = edited.IsPasswordUpdated;
+
+        if( isPasswordChanged )
         {
-            // Verify current password, hash new password, save
-            //user.HashedPwd = HashPassword(edited.NewPassword);
+            string currPwd = HashUtil.HashClient(edited.CurrentPassword);
+            bool valid = HashUtil.VerifyPasswordServer(currPwd, user.HashedPwd);
+            if (!valid)
+            {
+                Console.WriteLine(" *** Invalid password");
+                return;
+            }
         }
+
+        UserDto dtoUser = new()
+        {
+            Id = edited.Id,
+            FullName = edited.FullName,
+            Login = edited.Login,
+            HashedPwd = HashUtil.HashClient(edited.NewPassword),
+            IsPasswordUpdated = edited.IsPasswordUpdated
+        };
+        bool bSuccess = await UserService.EditUserAsync(dtoUser);
+        Console.WriteLine("User updated? " + bSuccess);
+
+
 
         ShowPwdDialog = false;
     }
