--- a/Frontend/wwwroot/css/app.css
+++ b/Frontend/wwwroot/css/app.css
@@ -154,6 +154,7 @@ code {
     display: flex;
     flex-direction: column;
     padding: 16px;
+    overflow: hidden;
 }
 
 .dock-header {
@@ -164,6 +165,7 @@ code {
 }
 
 .dock-body {
+    position: relative;
     flex-grow: 1;
     overflow-y: auto;
     padding: 0 8px;
@@ -176,3 +178,21 @@ code {
 }
 
 
+/*Loading feature*/
+.loading-overlay {
+    position: absolute;
+    inset: 0;
+    background: rgba(255,255,255,0.75);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2000;
+}
+
+.loading-box {
+    text-align: center;
+    padding: 20px 30px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0,0,0,.2);
+}
